#cargo-features = ["profile-rustflags"]

[package]
name = "RustyPython"
version = "0.1.0"
edition = "2021"

[dependencies]
peg = "0.8.5"
strum = "0.26.3"
strum_macros = "0.26.4"
mopa = "0.2.2"
ahash = "0.8.11"

[profile.release]
lto = "fat"
#opt-level = 3
#rustflags = ["-C", "target-cpu=native"]
overflow-checks = false
codegen-units = 1

[profile.bench]
debug = true
lto = "off"

[features]
trace = ["peg/trace"]
